--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,16 +1,14 @@
 .header {
-  width: 1440px;
+  width: 100%;
   height: 80px;
   border: 1px solid black;
-  color: black;
+  color: #fff;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
-}
-
-.navigate {
+  backdrop-filter: blur(40px);
+  background: rgba(18, 24, 41, 0.8);
   display: flex;
-}
-li {
-  margin-right: 30px;
+  align-items: center;
+  justify-content: space-between;
 }
