--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   /* color-scheme: light dark; */
   /* color: rgba(255, 255, 255, 0.87); */
-  /* background-color: #242424; */
+  background-color: rgba(37, 30, 98, 1);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,8 +14,10 @@
 }
 
 body {
-  width: 1440px;
-  height: 3192px;
+  max-width: 1440px;
+  width: 100%;
+  max-height: 3192px;
+  height: 100%;
 }
 
 button {
