--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -18,6 +21,8 @@ body {
   width: 100%;
   max-height: 3192px;
   height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 button {
